fix white space on bottom

--- a/ClientApp/src/output.css
+++ b/ClientApp/src/output.css
@@ -661,6 +661,10 @@ video {
   margin-left: 0.25rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .inline {
   display: inline;
 }
@@ -1003,6 +1007,14 @@ video {
 
 .pt-8 {
   padding-top: 2rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 
 .text-left {
